--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-* {
+*, ::after, ::before {
   box-sizing: border-box;
 }
 
@@ -19,8 +19,14 @@ h1, h2, h3, h4, h5 {
   font-family: 'Slabo 27px';
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
 #page {
   height: 100%;
+  overflow: auto;
 
   background: url(/img/cesta.jpg) center no-repeat;
   background-size: cover;
@@ -28,30 +34,58 @@ h1, h2, h3, h4, h5 {
 
   transition: 0.3s all ease-in-out;
 
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
   -webkit-transform: translateX(0);
   transform: translateX(0);
-  -webkit-transform: translateX(0) translateZ(0);
-  transform: translateX(0) translateZ(0);
+
+  -moz-transform: translateZ(0) translateX(0);
+  -ms-transform: translateZ(0) translateX(0);
+  -o-transform: translateZ(0) translateX(0);
+  -webkit-transform: translateZ(0) translateX(0);
+  transform: translateZ(0) translateX(0);
+
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
+
+  -moz-transition: 300ms ease all;
+  -ms-transition: 300ms ease all;
+  -o-transition: 300ms ease all;
+  -webkit-transition: 300ms ease all;
+  transition: 300ms ease all;
+
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .sidemenu--open #page {
+  -moz-transform: translateX(-249px);
+  -ms-transform: translateX(-249px);
+  -o-transform: translateX(-249px);
   -webkit-transform: translateX(-249px);
   transform: translateX(-249px);
-  -webkit-transform: translateX(-249px) tranlateZ(0);
-  transform: translateX(-249px) tranlateZ(0);
+
+  -moz-transform: translateZ(0) translateX(-249px);
+  -ms-transform: translateZ(0) translateX(-249px);
+  -o-transform: translateZ(0) translateX(-249px);
+  -webkit-transform: translateZ(0) translateX(-249px);
+  transform: translateZ(0) translateX(-249px);
+
+  -moz-transform: translate3d(-249px, 0, 0);
+  -ms-transform: translate3d(-249px, 0, 0);
+  -o-transform: translate3d(-249px, 0, 0);
   -webkit-transform: translate3d(-249px, 0, 0);
   transform: translate3d(-249px, 0, 0);
 }
 
-.sidemenu--open #menu {
-  z-index: 0;
-}
-
 #darker {
-  content: "";
-
   position: absolute;
   top: 0;
   left: 0;
@@ -73,10 +107,12 @@ h1, h2, h3, h4, h5 {
 
 #header {
   width: 100%;
-  box-sizing: border-box;
 }
 
 #logo {
+}
+
+#logo img {
   width: 45px;
   margin-right: 8px;
 }
@@ -89,15 +125,40 @@ h1, h2, h3, h4, h5 {
   position: fixed;
   right: 0;
   top: 0;
+  display: flex;
+  z-index: -1;
+  flex-direction: column;
+  visibility: hidden;
+  transition: 0.3s all;
+
   overflow: auto;
   height: 100%;
   width: 250px;
   padding: 25px;
   background: rgba(0,0,0,0.8);
+
   justify-content: center;
-  display: flex;
-  flex-direction: column;
-  z-index: -1;
+}
+
+#menu ul {
+  list-style: none;
+  padding: 10px;
+}
+
+#menu ul:first-child {
+  padding: 0;
+}
+
+#menu li {
+  padding: 7px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+.sidemenu--open #menu {
+  visibility: visible;
+  z-index: 0;
 }
 
 #menu-toogle {
@@ -114,7 +175,6 @@ h1, h2, h3, h4, h5 {
 
 .container {
   max-width: 1140px;
-  height: 100%;
   margin: 0 auto;
 }
 
@@ -124,16 +184,20 @@ h1, h2, h3, h4, h5 {
   text-align: center;
 }
 
-.margin-topbottom--auto {
-  margin: auto 0;
+.margin_left--auto, .margin_left-right--auto {
+  margin-left: auto;
 }
 
-.margin-bottom--auto {
-  margin-bottom: auto;
+.margin_right--auto, .margin_left-right--auto {
+  margin-right: auto;
 }
 
-.margin-top--auto {
+.margin_top--auto, .margin_top-bottom--auto {
   margin-top: auto;
+}
+
+.margin_bottom--auto, .margin_top-bottom--auto {
+  margin-bottom: auto;
 }
 
 .padding-top-10 {
@@ -162,8 +226,10 @@ h1, h2, h3, h4, h5 {
 
 .flex {
   display: flex;
+}
+
+.flex_align--center {
   align-items: center;
-  justify-content: center;
 }
 
 .flex-column {
@@ -200,248 +266,3 @@ h1, h2, h3, h4, h5 {
 .flex-3 {
   flex: 3;
 }
-
-/* Burger menu */
-
-  /* Icon 1 */
-
-  #nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
-    width: 30px;
-    height: 23px;
-    position: relative;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-  }
-
-  #nav-icon1 span, #nav-icon3 span, #nav-icon4 span {
-    display: block;
-    position: absolute;
-    height: 4px;
-    width: 100%;
-    background: #fff;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-  }
-
-  #nav-icon1 span:nth-child(1) {
-    top: 0px;
-  }
-
-  #nav-icon1 span:nth-child(2) {
-    top: 18px;
-  }
-
-  #nav-icon1 span:nth-child(3) {
-    top: 36px;
-  }
-
-  #nav-icon1.open span:nth-child(1) {
-    top: 18px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-
-  #nav-icon1.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-  }
-
-  #nav-icon1.open span:nth-child(3) {
-    top: 18px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-  }
-
-  /* Icon 2 */
-
-  #nav-icon2 span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 50%;
-    background: #d3531a;
-    opacity: 1;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-  }
-
-  #nav-icon2 span:nth-child(even) {
-    left: 50%;
-    border-radius: 0 9px 9px 0;
-  }
-
-  #nav-icon2 span:nth-child(odd) {
-    left:0px;
-    border-radius: 9px 0 0 9px;
-  }
-
-  #nav-icon2 span:nth-child(1), #nav-icon2 span:nth-child(2) {
-    top: 0px;
-  }
-
-  #nav-icon2 span:nth-child(3), #nav-icon2 span:nth-child(4) {
-    top: 18px;
-  }
-
-  #nav-icon2 span:nth-child(5), #nav-icon2 span:nth-child(6) {
-    top: 36px;
-  }
-
-  #nav-icon2.open span:nth-child(1),#nav-icon2.open span:nth-child(6) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-
-  #nav-icon2.open span:nth-child(2),#nav-icon2.open span:nth-child(5) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-
-  #nav-icon2.open span:nth-child(1) {
-    left: 5px;
-    top: 7px;
-  }
-
-  #nav-icon2.open span:nth-child(2) {
-    left: calc(50% - 5px);
-    top: 7px;
-  }
-
-  #nav-icon2.open span:nth-child(3) {
-    left: -50%;
-    opacity: 0;
-  }
-
-  #nav-icon2.open span:nth-child(4) {
-    left: 100%;
-    opacity: 0;
-  }
-
-  #nav-icon2.open span:nth-child(5) {
-    left: 5px;
-    top: 29px;
-  }
-
-  #nav-icon2.open span:nth-child(6) {
-    left: calc(50% - 5px);
-    top: 29px;
-  }
-
-  /* Icon 3 */
-
-  #nav-icon3 span:nth-child(1) {
-    top: 0px;
-  }
-
-  #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-    top: 9px;
-  }
-
-  #nav-icon3 span:nth-child(4) {
-    top: 18px;
-  }
-
-  #nav-icon3.open span:nth-child(1) {
-    top: 9px;
-    width: 0%;
-    left: 50%;
-  }
-
-  #nav-icon3.open span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-
-  #nav-icon3.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-
-  #nav-icon3.open span:nth-child(4) {
-    top: 9px;
-    width: 0%;
-    left: 50%;
-  }
-
-  /* Icon 4 */
-
-  #nav-icon4 span:nth-child(1) {
-    top: 0px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
-
-  #nav-icon4 span:nth-child(2) {
-    top: 18px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
-
-  #nav-icon4 span:nth-child(3) {
-    top: 36px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
-
-  #nav-icon4.open span:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    top: -3px;
-    left: 8px;
-  }
-
-  #nav-icon4.open span:nth-child(2) {
-    width: 0%;
-    opacity: 0;
-  }
-
-  #nav-icon4.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    top: 39px;
-    left: 8px;
-  }
