--- a/css/burger-menu.css
+++ b/css/burger-menu.css
@@ -169,27 +169,27 @@
     top: 18px;
   }
 
-  #nav-icon3.open span:nth-child(1) {
+  .sidemenu--open #nav-icon3 span:nth-child(1) {
     top: 9px;
     width: 0%;
     left: 50%;
   }
 
-  #nav-icon3.open span:nth-child(2) {
+  .sidemenu--open #nav-icon3 span:nth-child(2) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
   }
 
-  #nav-icon3.open span:nth-child(3) {
+  .sidemenu--open #nav-icon3 span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 
-  #nav-icon3.open span:nth-child(4) {
+  .sidemenu--open #nav-icon3 span:nth-child(4) {
     top: 9px;
     width: 0%;
     left: 50%;
