--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+::selection {
+  color: #fff;
+  background: rgba(85, 196, 94,0.5);
+}
+
 html {
   height: 100%;
 }
@@ -28,11 +33,9 @@ a {
   height: 100%;
   overflow: auto;
 
-  background: url(/img/cesta.jpg) center no-repeat;
+  background: #222 center no-repeat;
   background-size: cover;
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-
-  transition: 0.3s all ease-in-out;
 
   -moz-transform: translateX(0);
   -ms-transform: translateX(0);
@@ -65,7 +68,45 @@ a {
   backface-visibility: hidden;
 }
 
+@media (max-height: 479px) {
+  #page {
+    background-image: url(/img/cesta_h479.jpg);
+  }
+}
+
+@media (min-height: 480px) and (max-height: 719px) {
+  #page {
+    background-image: url(/img/cesta_h719.jpg);
+  }
+}
+
+@media (min-height: 720px) and (max-height: 959px) {
+  #page {
+    background-image: url(/img/cesta_h959.jpg);
+  }
+}
+
+@media (min-height: 960px) and (max-height: 1079px) {
+  #page {
+    background-image: url(/img/cesta_h1079.jpg);
+  }
+}
+
+@media (min-height: 1080px) and (max-height: 2159px) {
+  #page {
+    background-image: url(/img/cesta_h2159.jpg);
+  }
+}
+
+@media (min-height: 2160px) {
+  #page {
+    background-image: url(/img/cesta_h2242.jpg);
+  }
+}
+
 .sidemenu--open #page {
+  overflow: hidden;
+
   -moz-transform: translateX(-249px);
   -ms-transform: translateX(-249px);
   -o-transform: translateX(-249px);
@@ -97,7 +138,7 @@ a {
   background: rgba(0, 0, 0, 0.4);
   opacity: 0;
 
-  transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease;
 }
 
 .sidemenu--open #darker {
@@ -107,9 +148,7 @@ a {
 
 #header {
   width: 100%;
-}
-
-#logo {
+  min-height: max-content;
 }
 
 #logo img {
@@ -126,10 +165,7 @@ a {
   right: 0;
   top: 0;
   display: flex;
-  z-index: -1;
   flex-direction: column;
-  visibility: hidden;
-  transition: 0.3s all;
 
   overflow: auto;
   height: 100%;
@@ -156,13 +192,8 @@ a {
   font-size: 1.3rem;
 }
 
-.sidemenu--open #menu {
-  visibility: visible;
-  z-index: 0;
-}
-
 #menu-toogle {
-  z-index: 1;
+  z-index: 2;
 }
 
 .img-ja {
@@ -208,8 +239,22 @@ a {
   padding-top: 15px;
 }
 
+.padding-15 {
+  padding: 15px;
+}
+
 .padding-25 {
   padding: 25px;
+}
+
+.padding-tb-10 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.padding-tb-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .padding-lr-25 {
@@ -220,6 +265,10 @@ a {
 .inline-block-center {
   display: inline-block;
   vertical-align: middle;
+}
+
+.h-100 {
+  height: 100%;
 }
 
 /* Flexbox */
@@ -265,4 +314,26 @@ a {
 
 .flex-3 {
   flex: 3;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .sm-d-flex {
+    display: flex;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+
 }
