--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,8 @@ html {
 
 body {
   height: 100%;
+  height: 100%;
+  height: 100%;
   overflow: hidden;
 
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
