--- a/css/custom.css
+++ b/css/custom.css
@@ -39,6 +39,7 @@ a {
   overflow: auto;
 
   background: #222 center no-repeat;
+  background-image: url(/img/cesta_h479.jpg);
   background-size: cover;
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 
@@ -73,31 +74,25 @@ a {
   backface-visibility:          hidden;
 }
 
-@media (max-height: 479px) {
-  #page {
-    background-image: url(/img/cesta_h479.jpg);
-  }
-}
-
-@media (min-height: 480px) and (max-height: 719px) {
+@media (min-height: 480px) {
   #page {
     background-image: url(/img/cesta_h719.jpg);
   }
 }
 
-@media (min-height: 720px) and (max-height: 959px) {
+@media (min-height: 720px) {
   #page {
     background-image: url(/img/cesta_h959.jpg);
   }
 }
 
-@media (min-height: 960px) and (max-height: 1079px) {
+@media (min-height: 960px) {
   #page {
     background-image: url(/img/cesta_h1079.jpg);
   }
 }
 
-@media (min-height: 1080px) and (max-height: 2159px) {
+@media (min-height: 1080px) {
   #page {
     background-image: url(/img/cesta_h2159.jpg);
   }
@@ -135,7 +130,6 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
 
   visibility: hidden;
   width: 100%;
@@ -151,7 +145,7 @@ a {
   opacity: 1;
 }
 
-#header {
+#header-bar {
   width: 100%;
   min-height: max-content;
 }
