--- a/css/burger-menu.css
+++ b/css/burger-menu.css
@@ -4,6 +4,7 @@
 
   #nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
     width: 30px;
+    width: 30px;
     height: 23px;
     margin: 0 auto;
     position: relative;
