Zkouška commitu úprava - kam se uloží?

--- a/css/burger-menu.css
+++ b/css/burger-menu.css
@@ -5,6 +5,7 @@
   #nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
     width: 30px;
     height: 23px;
+    height: 23px;
     margin: 0 auto;
     position: relative;
     -webkit-transform: rotate(0deg);
