--- a/css/burger-menu.css
+++ b/css/burger-menu.css
@@ -6,6 +6,7 @@
     width: 30px;
     height: 23px;
     height: 23px;
+    height: 23px;
     margin: 0 auto;
     position: relative;
     -webkit-transform: rotate(0deg);
