--- a/css/burger-menu.css
+++ b/css/burger-menu.css
@@ -7,6 +7,7 @@
     height: 23px;
     height: 23px;
     margin: 0 auto;
+    margin: 0 auto;
     position: relative;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
