--- a/css/custom.css
+++ b/css/custom.css
@@ -39,6 +39,7 @@ a {
   overflow: auto;
 
   background: #222 center no-repeat;
+  background-image: url(/img/cesta_h479.jpg);
   background-size: cover;
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 
@@ -73,25 +74,19 @@ a {
   backface-visibility:          hidden;
 }
 
-@media (max-height: 479px) {
-  #page {
-    background-image: url(/img/cesta_h479.jpg);
-  }
-}
-
-@media (min-height: 480px) and (max-height: 719px) {
+@media (min-height: 480px) {
   #page {
     background-image: url(/img/cesta_h719.jpg);
   }
 }
 
-@media (min-height: 720px) and (max-height: 959px) {
+@media (min-height: 720px) {
   #page {
     background-image: url(/img/cesta_h959.jpg);
   }
 }
 
-@media (min-height: 960px) and (max-height: 1079px) {
+@media (min-height: 960px) {
   #page {
     background-image: url(/img/cesta_h1079.jpg);
   }
@@ -199,6 +194,11 @@ a {
 
 #menu-toogle {
   z-index: 2;
+}
+
+.sidemenu--open #menu-toogle {
+  position: fixed;
+  right: 10px;
 }
 
 .img-ja {
